[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/visual/assets_tiled.png" type="Texture" id=2]
[ext_resource path="res://assets/visual/spacebar.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -7.0
margin_right = 25.5
margin_bottom = 7.0
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel" type="Label" parent="."]
margin_left = 744.0
margin_top = 272.0
margin_right = 889.0
margin_bottom = 286.0
text = "Hit the target to score!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 267.0
margin_right = 191.0
margin_bottom = 281.0
text = "3 Projectiles Remaining"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthBar" type="ProgressBar" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 45.1881
margin_top = -13.4751
margin_right = 184.189
margin_bottom = 0.524902
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArrow" type="AnimatedSprite" parent="."]
position = Vector2( 192, 456 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )

[node name="LeftArrow" type="AnimatedSprite" parent="."]
position = Vector2( 32, 456 )
rotation = 3.14159
scale = Vector2( 0.511655, 0.511655 )
frames = SubResource( 4 )

[node name="SpaceBar" type="AnimatedSprite" parent="."]
position = Vector2( 112, 456 )
frames = SubResource( 5 )

[node name="ReturnButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.5
margin_top = 77.0
margin_right = 91.5
margin_bottom = 149.0
text = "Return to Title"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
